rest of instagram

--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -9,3 +9,6 @@
 	<%= f.input :password %>
 	<%= f.button :submit %>
 	<% end %>
+<center>
+<li><a href="/Home"><span class="glyphicon glyphicon-user"></span>Back to Home</a></li>
+</center> 
