--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Sign Up!</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
 
 <%= simple_form_for(@user) do |f| %>
 <center>
@@ -33,3 +33,6 @@
 	</table>
 </center>
 <% end %>
+<center>
+<li><a href="/Home"><span class="glyphicon glyphicon-user"></span>Back to Home</a></li>
+</center> 
